--- a/test.python.yml
+++ b/test.python.yml
@@ -24,7 +24,7 @@ jobs:
       - name: install dependencies
         run:  |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -r requirements.txt
 
       - name: Run tests
         run: pytest
