--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -1,30 +1,36 @@
 name: Python Flask App
 
 on:
-    push:
-        branches:
-            main
-    pull__request:
-        branches:
-
+  push:
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
 
 jobs:
-    build:
-        runs-on: ubuntu:latest
 
+  build:
+    runs-on: ubuntu-latest
     steps:
-      - name: Checkout code
-        users: actions/checkout@v3
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.9'
+    - name: Set up Python 3.12
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.12'
 
-      - name: install dependencies
-        run:  |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+    
+    - name: Run tests
+      run: |
+        pytest
 
-      - name: Run tests
-        run: pytest
+    - name: PWD testing
+      run: |
+        pwd
+        echo "this is the pwd"
