--- a/.github/workflows/test-python.yaml
+++ b/.github/workflows/test-python.yaml
@@ -29,3 +29,19 @@ jobs:
     - name: Run tests
       run: |
         pytest
+
+    - name: Set up SSH key
+      run: |
+        mkdir -p ~/.ssh
+        echo "${{ secrets.EC2_SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        ssh-keyscan -H ${{ secrets.EC2_PUBLIC_IP }} >> ~/.ssh/known_hosts
+
+    - name: Run SSH commands on EC2
+      run: |
+        ssh ec2-usert@${{ secrets.EC2_PUBLIC_IP }} << 'EOF'
+          echo "Connected to EC2"
+          uname -a
+          docker ps
+          sudo systemctl restart docker
+        EOF
